--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div id="event1">
         <article id="orientation">
             
-            <h2>Features of Internship:</h2>
+            <h2>Features of Orientation:</h2>
             <ul class="gym">
                 <!-- see that this class is named gym so that when I see further tutorial , it works :D-->
                 <li><h3>International Webinar</h3></li>
