--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="events">
         <div id="event1">
         <article id="corpo">
-            <img src="images/corpo-internship.jpg"/>
+            <img src="images/Corpo-Internship.jpg"/>
 
         </article>
         <aside id="corpo">
@@ -144,7 +144,7 @@
     <section>
         
         <h1>Social And Entertainment Team</h1>
-        <img src="images/socialTeam.jpg"/>
+        <img src="images/Socialteam.jpg"/>
         <p>The Heart of SPC, this team was created for the purpose for giving back to the society. It holds key position in the organization of fest.
              Without this team, it will be impossible to attract crowd to the event and let students know about SPC. The success of the event is 
             the motive of this team.  </p>
