--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
         <script src="jquery.blueberry.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
-        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvYJTWTTOV1rOL5d7C8jZJdsdFg8Iv3Ew&callback=initMap"
-        type="text/javascript"></script>
         <script>
             $(window).load(function(){
                 $('.blueberry').blueberry();
@@ -105,7 +102,7 @@
     <div id="event1">
         <article id="orientation">
             
-            <h2>Features of Internship:</h2>
+            <h2>Features of Orientation:</h2>
             <ul class="gym">
                 <!-- see that this class is named gym so that when I see further tutorial , it works :D-->
                 <li><h3>International Webinar</h3></li>
@@ -176,11 +173,6 @@
         <section id="spcLogo">
             <img src="images/spcLogo.png" />
         </section>
-        <div id="map">
-            <iframe width="600" height="450"frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDyRiA1ATBjPTiaRjlOysLkPE21Bs_ZWas&q=Space+Needle,Seattle+WA" allowfullscreen>
-          </iframe>
-                
-            </div>
     </footer>
     <footer class="second">
         <p>©Copyright, Ashish Gupta,2017</p>
